Correction of a typo
Signed-off-by: Riccardo Finotello <riccardo.finotello@gmail.com>

--- a/sft_level_trunc.ipynb
+++ b/sft_level_trunc.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "# print machine specs\n",
     "print('Machine specifications:\\n')\n",
-    "!echo \"CPU: $(lscpu| awk '/^Model name/ {$1=\"\"; $2=\"\"; print}'| sejd 's/^[[:space:]]*//g')\"\n",
+    "!echo \"CPU: $(lscpu| awk '/^Model name/ {$1=\"\"; $2=\"\"; print}'| sed 's/^[[:space:]]*//g')\"\n",
     "!echo \"GPU: $(lspci| awk '/3D controller/ {$1=\"\"; $2=\"\"; $3=\"\"; print}'| sed 's/^[[:space:]]*//g')\"\n",
     "!echo \"RAM: $(free --giga| awk '/^Mem/ {print $2}')GB (avail. now: $(free --giga| awk '/^Mem/ {print $7}')GB)\""
    ]
