--- a/sft-level-trunc.ipynb
+++ b/sft-level-trunc.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Abstract\n",
+    "# Machine Learning for Level Truncation in Open String Field Theory\n",
+    "\n",
+    "## Abstract\n",
     "\n",
     "In the framework of bosonic Open String Field Theory (OSFT), we consider several observables characterised by conformal weight and type, and the position of vacua in the potential for various values of truncated mass level. We focus on the prediction of the extrapolated value for the level-$\\infty$ truncation using Machine Learning (ML) techniques."
    ]
