Add number of parameters of the network
Signed-off-by: Riccardo Finotello <riccardo.finotello@gmail.com>

--- a/sec/ml.tex
+++ b/sec/ml.tex
@@ -22,7 +22,7 @@ models, while r-SVR uses a Gaussian \textit{kernel trick}; RF and GBDT are
 different ensemble algorithms based on decision trees (namely random forests
 and gradient boosted trees); ANN represents the neural network architecture (no
 hidden layers, only one input layer with 30 units, batch normalisation layer
-and a dropout layer with 0.1 drop rate).
+and a dropout layer with 0.1 drop rate leading to a network of 691 trainable parameters and 60 fixed parameters).
 
 \begin{table}[htbp]
 \centering
