Add more explanations and be more precise on different points. Add short bibliography.
Signed-off-by: Riccardo Finotello <riccardo.finotello@gmail.com>

--- a/report.tex
+++ b/report.tex
@@ -20,6 +20,8 @@
   Via P. Giuria 1, I-10125 Torino, Italy
 }
 
+\bibliography{report}
+
 \begin{document}
 
   \pagestyle{plain}
@@ -46,5 +48,7 @@
 
   \section{Conclusions}\label{sec:concl}
     \input{sec/conclusion}
+
+  \printbibliography
 
 \end{document}
