--- a/sciencestuff.sty
+++ b/sciencestuff.sty
@@ -54,13 +54,13 @@
 \renewcommand{\delta}{\Updelta}
 \renewcommand{\theta}{\Uptheta}
 \renewcommand{\lambda}{\Uplambda}
-\renewcommand{\xi}{\Upxi}
-\renewcommand{\pi}{\Uppi}
-\renewcommand{\sigma}{\Upsigma}
-\renewcommand{\upsilon}{\Upupsilon}
-\renewcommand{\phi}{\Upphi}
-\renewcommand{\psi}{\Uppsi}
-\renewcommand{\omega}{\Upomega}
+\renewcommand{\Xi}{\Upxi}
+\renewcommand{\Pi}{\Uppi}
+\renewcommand{\Sigma}{\Upsigma}
+\renewcommand{\Upsilon}{\Upupsilon}
+\renewcommand{\Phi}{\Upphi}
+\renewcommand{\Psi}{\Uppsi}
+\renewcommand{\Omega}{\Upomega}
 
 %---- numerical sets
 
