--- a/sec/synopsis.tex
+++ b/sec/synopsis.tex
@@ -3,3 +3,6 @@ solutions at different radii of several observables and at different mass level
 truncations.
 We then use machine learning (ML) techniques to extract the value of the
 observable at infinite mass level truncation.
+More details can be found looking at the analysis at
+\href{https://thesfinox.github.io/ml-sft-trunc/}{this URL} (only the analysis
+is accessible, while the original database is not public).
