Corrections to scripts and predictions in Keras
Signed-off-by: Riccardo Finotello <riccardo.finotello@gmail.com>

--- a/sft-trunc_dlump.ipynb
+++ b/sft-trunc_dlump.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,8 +1109,18 @@
     "df = df.join(predictions)\n",
     "\n",
     "# save the dataset and display it\n",
-    "df.to_csv('./data/data_sft_dlump_preds.json', index=False)\n",
+    "df.to_csv('./data/data_sft_dlump_preds.csv', index=False)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_short = df.filter(regex='^(?!level).*')\n",
+    "df_short.to_csv('./data/data_sft_dlump_preds_short.csv')"
    ]
   },
   {
