--- a/sft-trunc_ml.ipynb
+++ b/sft-trunc_ml.ipynb
@@ -4363,11 +4363,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "with open('./metrics/ridge_train.json', 'r') as f:\n",
     "    ridge = json.load(f)\n",
@@ -4393,7 +4395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -4495,23 +4497,26 @@
        "ANN                 0.003  (-0.001, 0.006)  0.051  0.008  0.995"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print('Training metrics:\\n')\n",
+    "metrics_train.to_csv('./metrics/train_summary.csv')\n",
     "metrics_train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "with open('./metrics/ridge_val.json', 'r') as f:\n",
     "    ridge = json.load(f)\n",
@@ -4537,7 +4542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -4639,23 +4644,26 @@
        "ANN                 0.00002       (1e-05, 3e-05)  0.00466  0.00396  0.99996"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print('Validation metrics:\\n')\n",
+    "metrics_val.to_csv('./metrics/val_summary.csv')\n",
     "metrics_val"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "with open('./metrics/ridge_test.json', 'r') as f:\n",
     "    ridge = json.load(f)\n",
@@ -4681,7 +4689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -4783,13 +4791,14 @@
        "ANN                 0.00004       (2e-05, 5e-05)  0.00607  0.00476  0.99993"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print('Test metrics:\\n')\n",
+    "metrics_test.to_csv('./metrics/test_summary.csv')\n",
     "metrics_test"
    ]
   }
