--- a/report.bib
+++ b/report.bib
@@ -1,132 +1,79 @@
-@incollection{Lundberg:2017:Shap,
-title = {A Unified Approach to Interpreting Model Predictions},
-author = {Lundberg, Scott M and Lee, Su-In},
-booktitle = {Advances in Neural Information Processing Systems 30},
-editor = {I. Guyon and U. V. Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
-pages = {4765--4774},
-year = {2017},
-publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/7062-a-unified-approach-to-interpreting-model-predictions.pdf}
+
+@article{Abadi:2015:TensorFlowLargescaleMachine,
+  title = {{{TensorFlow}}: {{Large}}-Scale Machine Learning on Heterogeneous Systems},
+  author = {Abadi, Martín and Agarwal, Ashish and Barham, Paul and Brevdo, Eugene and Chen, Zhifeng and Citro, Craig and Corrado, Greg S. and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Goodfellow, Ian and Harp, Andrew and Irving, Geoffrey and Isard, Michael and Jia, Yangqing and Jozefowicz, Rafal and Kaiser, Lukasz and Kudlur, Manjunath and Levenberg, Josh and Mané, Dandelion and Monga, Rajat and Moore, Sherry and Murray, Derek and Olah, Chris and Schuster, Mike and Shlens, Jonathon and Steiner, Benoit and Sutskever, Ilya and Talwar, Kunal and Tucker, Paul and Vanhoucke, Vincent and Vasudevan, Vijay and Viégas, Fernanda and Vinyals, Oriol and Warden, Pete and Wattenberg, Martin and Wicke, Martin and Yu, Yuan and Zheng, Xiaoqiang},
+  date = {2015},
+  url = {https://www.tensorflow.org/}
 }
 
-@article{Lundberg:2020:TreeExp,
-  title={From local explanations to global understanding with explainable AI for trees},
-  author={Lundberg, Scott M. and Erion, Gabriel and Chen, Hugh and DeGrave, Alex and Prutkin, Jordan M. and Nair, Bala and Katz, Ronit and Himmelfarb, Jonathan and Bansal, Nisha and Lee, Su-In},
-  journal={Nature Machine Intelligence},
-  volume={2},
-  number={1},
-  pages={2522-5839},
-  year={2020},
-  publisher={Nature Publishing Group}
+@software{Head:2018:ScikitoptimizeScikitoptimizeV0,
+  title = {Scikit-Optimize/Scikit-Optimize: V0.5.2},
+  author = {Head, Tim and {MechCoder} and Louppe, Gilles and Shcherbatyi, Iaroslav and {fcharras} and Vinícius, Zé and {cmmalone} and Schröder, Christopher and {nel215} and Campos, Nuno and Young, Todd and Cereda, Stefano and Fan, Thomas and {rene-rex} and Shi, Kejia (KJ) and Schwabedal, Justus and {carlosdanielcsantos} and {Hvass-Labs} and Pak, Mikhail and {SoManyUsernamesTaken} and Callaway, Fred and Estève, Loïc and Besson, Lilian and Cherti, Mehdi and Pfannschmidt, Karlson and Linzberger, Fabian and Cauet, Christophe and Gut, Anna and Mueller, Andreas and Fabisch, Alexander},
+  date = {2018-03},
+  doi = {10.5281/zenodo.1207017},
+  url = {https://doi.org/10.5281/zenodo.1207017},
+  organization = {{Zenodo}},
+  version = {v0.5.2}
 }
 
-@incollection{Ke:2017:LightGBM,
-title = {LightGBM: A Highly Efficient Gradient Boosting Decision Tree},
-author = {Ke, Guolin and Meng, Qi and Finley, Thomas and Wang, Taifeng and Chen, Wei and Ma, Weidong and Ye, Qiwei and Liu, Tie-Yan},
-booktitle = {Advances in Neural Information Processing Systems 30},
-editor = {I. Guyon and U. V. Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
-pages = {3146--3154},
-year = {2017},
-publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/6907-lightgbm-a-highly-efficient-gradient-boosting-decision-tree.pdf}
+@article{Hunter:2007:Matplotlib2DGraphics,
+  title = {Matplotlib: {{A 2D}} Graphics Environment},
+  author = {Hunter, J. D.},
+  date = {2007},
+  journaltitle = {Computing in Science \& Engineering},
+  volume = {9},
+  pages = {90--95},
+  publisher = {{IEEE COMPUTER SOC}},
+  doi = {10/drbjhg},
+  abstract = {Matplotlib is a 2D graphics package used for Python for application development, interactive scripting, and publication-quality image generation across user interfaces and operating systems.},
+  number = {3}
 }
 
-@article{Pedregosa:2011:ScikitLearn,
- title={Scikit-learn: Machine Learning in {P}ython},
- author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
-         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
-         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
-         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
- journal={Journal of Machine Learning Research},
- volume={12},
- pages={2825--2830},
- year={2011}
+@inproceedings{Ke:2017:LightGBMHighlyEfficient,
+  title = {{{LightGBM}}: {{A Highly Efficient Gradient Boosting Decision Tree}}},
+  shorttitle = {{{LightGBM}}},
+  booktitle = {Advances in {{Neural Information Processing Systems}} 30},
+  author = {Ke, Guolin and Meng, Qi and Finley, Thomas and Wang, Taifeng and Chen, Wei and Ma, Weidong and Ye, Qiwei and Liu, Tie-Yan},
+  editor = {Guyon, I. and Luxburg, U. V. and Bengio, S. and Wallach, H. and Fergus, R. and Vishwanathan, S. and Garnett, R.},
+  date = {2017},
+  pages = {3146--3154},
+  publisher = {{Curran Associates, Inc.}},
+  url = {http://papers.nips.cc/paper/6907-lightgbm-a-highly-efficient-gradient-boosting-decision-tree.pdf},
+  urldate = {2020-03-01},
+  file = {/home/riccardo/.local/share/zotero/files/ke_et_al_2017_lightgbm.pdf}
 }
 
-@software{Head:2018:ScikitOptimize,
-  author       = {Tim Head and
-                  MechCoder and
-                  Gilles Louppe and
-                  Iaroslav Shcherbatyi and
-                  fcharras and
-                  Zé Vinícius and
-                  cmmalone and
-                  Christopher Schröder and
-                  nel215 and
-                  Nuno Campos and
-                  Todd Young and
-                  Stefano Cereda and
-                  Thomas Fan and
-                  rene-rex and
-                  Kejia (KJ) Shi and
-                  Justus Schwabedal and
-                  carlosdanielcsantos and
-                  Hvass-Labs and
-                  Mikhail Pak and
-                  SoManyUsernamesTaken and
-                  Fred Callaway and
-                  Loïc Estève and
-                  Lilian Besson and
-                  Mehdi Cherti and
-                  Karlson Pfannschmidt and
-                  Fabian Linzberger and
-                  Christophe Cauet and
-                  Anna Gut and
-                  Andreas Mueller and
-                  Alexander Fabisch},
-  title        = {scikit-optimize/scikit-optimize: v0.5.2},
-  month        = mar,
-  year         = 2018,
-  publisher    = {Zenodo},
-  version      = {v0.5.2},
-  doi          = {10.5281/zenodo.1207017},
-  url          = {https://doi.org/10.5281/zenodo.1207017}
+@article{Lundberg:2020:LocalExplanationsGlobal,
+  title = {From Local Explanations to Global Understanding with Explainable {{AI}} for Trees},
+  author = {Lundberg, Scott M. and Erion, Gabriel and Chen, Hugh and DeGrave, Alex and Prutkin, Jordan M. and Nair, Bala and Katz, Ronit and Himmelfarb, Jonathan and Bansal, Nisha and Lee, Su-In},
+  date = {2020},
+  journaltitle = {Nature Machine Intelligence},
+  volume = {2},
+  pages = {2522--5839},
+  publisher = {{Nature Publishing Group}},
+  doi = {10/ggjtp4},
+  number = {1}
 }
 
-@misc{Abadi:2015:TensorFlow,
-title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
-url={https://www.tensorflow.org/},
-note={Software available from tensorflow.org},
-author={
-    Mart\'{i}n~Abadi and
-    Ashish~Agarwal and
-    Paul~Barham and
-    Eugene~Brevdo and
-    Zhifeng~Chen and
-    Craig~Citro and
-    Greg~S.~Corrado and
-    Andy~Davis and
-    Jeffrey~Dean and
-    Matthieu~Devin and
-    Sanjay~Ghemawat and
-    Ian~Goodfellow and
-    Andrew~Harp and
-    Geoffrey~Irving and
-    Michael~Isard and
-    Yangqing Jia and
-    Rafal~Jozefowicz and
-    Lukasz~Kaiser and
-    Manjunath~Kudlur and
-    Josh~Levenberg and
-    Dandelion~Man\'{e} and
-    Rajat~Monga and
-    Sherry~Moore and
-    Derek~Murray and
-    Chris~Olah and
-    Mike~Schuster and
-    Jonathon~Shlens and
-    Benoit~Steiner and
-    Ilya~Sutskever and
-    Kunal~Talwar and
-    Paul~Tucker and
-    Vincent~Vanhoucke and
-    Vijay~Vasudevan and
-    Fernanda~Vi\'{e}gas and
-    Oriol~Vinyals and
-    Pete~Warden and
-    Martin~Wattenberg and
-    Martin~Wicke and
-    Yuan~Yu and
-    Xiaoqiang~Zheng},
-  year={2015},
+@article{Pedregosa:2011:ScikitlearnMachineLearning,
+  title = {Scikit-Learn: {{Machine}} Learning in {{Python}}},
+  author = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+  date = {2011},
+  journaltitle = {Journal of Machine Learning Research},
+  volume = {12},
+  pages = {2825--2830}
 }
+
+@article{Virtanen:2020:SciPyFundamentalAlgorithms,
+  title = {{{SciPy}} 1.0: {{Fundamental}} Algorithms for Scientific Computing in Python},
+  author = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and Haberland, Matt and Reddy, Tyler and Cournapeau, David and Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and Bright, Jonathan and van der Walt, Stéfan J. and Brett, Matthew and Wilson, Joshua and Jarrod Millman, K. and Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and Kern, Robert and Larson, Eric and Carey, CJ and Polat, İlhan and Feng, Yu and Moore, Eric W. and Vand erPlas, Jake and Laxalde, Denis and Perktold, Josef and Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and Harris, Charles R and Archibald, Anne M. and Ribeiro, Antônio H. and Pedregosa, Fabian and van Mulbregt, Paul and Contributors, SciPy 1. 0},
+  date = {2020},
+  journaltitle = {Nature Methods},
+  volume = {17},
+  pages = {261--272},
+  doi = {10/ggj45f},
+  adsurl = {https://rdcu.be/b08Wh},
+  options = {useprefix=true}
+}
+
+
